[package]
name = "linkerd2-mock-dst"
version = "0.1.0"
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "blocking"] }
tonic = "0.2.1"
linkerd2-proxy-api = { git = "https://github.com/linkerd/linkerd2-proxy-api", features = ["transport"] }
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
structopt = "0.3"
futures = "0.3"
inotify = "0.8.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json  = "1.0.27"
inotify-sys = "0.1.3"
 libc = "0.2"