[package]
authors = ["Linkerd Developers <cncf-linkerd-dev@lists.cncf.io>"]
edition = "2018"
name = "linkerd2-mock-dst"
publish = false
version = "0.1.0"

[dependencies]
futures = "0.3"
inotify = "0.8.3"
inotify-sys = "0.1.3"
libc = "0.2"
linkerd2-proxy-api = {git = "https://github.com/linkerd/linkerd2-proxy-api", features = ["transport"]}
rustls = "0.18"
serde = {version = "1.0.104", features = ["derive"]}
serde_json = "1.0.27"
serde_yaml = "0.8.13"
structopt = "0.3"
tokio = {version = "0.2", features = ["macros", "rt-threaded", "sync", "fs"]}
tonic = "0.2.1"
tracing = "0.1"
tracing-error = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"
